--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -4,6 +4,10 @@ metadata:
   name: environment-variables
 data:
   THIS_SERVICE: $SERVICE_NAME
+  MYSQL_SCHEMA: $NAMESPACE-$SERVICE_NAME
+  MYSQL_HOST: $MYSQL_HOST
+  MYSQL_USER: $MYSQL_USER
+  MYSQL_PWD: $MYSQL_PWD
   SQLALCHEMY_DATABASE_URI: $SQLALCHEMY_DATABASE_URI
   SECRET_KEY: $SECRET_KEY
   BRANCH: $NAMESPACE
