--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: environment-variables
 data:
   THIS_SERVICE: $SERVICE_NAME
-  MYSQL_SCHEMA: $NAMESPACE-$SERVICE_NAME
+  MYSQL_SCHEMA: $MYSQL_SCHEMA
   MYSQL_HOST: $MYSQL_HOST
   MYSQL_USER: $MYSQL_USER
   MYSQL_PWD: $MYSQL_PWD
