--- a/.coder/coder.yaml
+++ b/.coder/coder.yaml
@@ -8,7 +8,7 @@ workspace:
       image:
         value: index.docker.io/ubuntu
       container-based-vm:
-        value: true
+        value: false
       cpu:
         value: 2
       memory:
