--- a/.coder/coder.yaml
+++ b/.coder/coder.yaml
@@ -32,4 +32,15 @@ workspace:
             apt install -y curl
         - name: "Create organization directory"
           command: "mkdir -p /home/coder/go/src/github.com/my-org"
+          # Be careful with keyscans like this
+        - name: "Create organization directory"
+          command: "mkdir -p /home/coder/go/src/github.com/my-org"
           # Be careful with keyscans like this!
+        - name: "Add GitHub to known hosts"
+          command:
+            "sudo ssh-keyscan -H github.com >> /home/coder/.ssh/known_hosts"
+        - name: "Clone Git Project"
+          command: "git clone git@github.com:mooperd/542-devops-app.git"
+          continue-on-error: true
+          directory: /home/coder/542-devops-app
+          
