--- a/.coder/coder.yaml
+++ b/.coder/coder.yaml
@@ -29,7 +29,7 @@ workspace:
         - name: "install curl"
           command: |
             apt update
-            apt install -y curl
+            apt install -y curl git ssh
         - name: "Create organization directory"
           command: "mkdir -p /home/coder/go/src/github.com/my-org"
           # Be careful with keyscans like this
