--- a/.coder/coder.yaml
+++ b/.coder/coder.yaml
@@ -35,7 +35,7 @@ workspace:
           command: "mkdir -p ~/.ssh"
         - name: "Add GitHub to known hosts"
           command:
-            "sudo ssh-keyscan -H github.com >> /home/coder/.ssh/known_hosts"
+            "ssh-keyscan -H github.com >> /home/coder/.ssh/known_hosts"
         - name: "Clone Git Project"
           command: "git clone git@github.com:mooperd/542-devops-app.git"
           continue-on-error: true
