--- a/.coder/coder.yaml
+++ b/.coder/coder.yaml
@@ -31,13 +31,11 @@ workspace:
             export DEBIAN_FRONTEND=noninteractive 
             apt-get update
             apt-get install -y curl git ssh
-        - name: "Create organization directory"
-          command: "mkdir -p ~/.ssh"
         - name: "Add GitHub to known hosts"
           command:
-            "ssh-keyscan -H github.com >> /home/coder/.ssh/known_hosts"
+            "mkdir -p ~/.ssh && ssh-keyscan -H github.com >> ~/.ssh/known_hosts"
         - name: "Clone Git Project"
           command: "git clone git@github.com:mooperd/542-devops-app.git"
           continue-on-error: true
-          directory: /home/coder/542-devops-app
+          directory: ~/542-devops-app
           
